<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_screen_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/StyleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_hello"
        android:layout_marginBottom="@dimen/margin_big"
        app:layout_constraintBottom_toTopOf="@+id/text_gritting"
        app:layout_constraintEnd_toEndOf="@+id/text_gritting"
        app:layout_constraintStart_toStartOf="@+id/text_gritting" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_tagline"
        style="@style/StyleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tagline"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_gritting"
        style="@style/StyleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_gritting"
        android:layout_marginBottom="@dimen/margin_big"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_in_btn_text"
        style="@style/StyleButton"
        app:icon="@drawable/ic_google"
        app:iconSize="20dp"
        app:iconGravity="textStart"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="@dimen/margin_big"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_skip_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_skip_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>